welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: value &&! is not a member of Boolean
	if ((aSmile && bSmile) || (!aSmile &&!bSmile)) {
                                           ^